--- a/force-app/main/default/classes/myGoalsController.cls
+++ b/force-app/main/default/classes/myGoalsController.cls
@@ -38,11 +38,7 @@ public without sharing class myGoalsController {
                if(String.isEmpty(resourceRTId)){
                  resourceRTId = [SELECT ContactId FROM User WHERE Id=:Userinfo.getUserId()].contactId;  
                }
-            System.debug('===resourceId===='+resourceRTId);
-             System.debug('===gName===='+name);
-             System.debug('===startdate===='+startdate);
-             System.debug('===enddate===='+enddate);
-             System.debug('===descri===='+descri);
+
              Goal__c gl = new Goal__c();
              gl.Resource__c = resourceRTId;
              gl.RecordTypeId = goalRecordTypeId;
@@ -50,8 +46,22 @@ public without sharing class myGoalsController {
              gl.Start_Date__c = startdate;
              gl.End_Date__c = enddate;
              gl.Description__c = descri;
-             Goal__c findTheActiveGoal = [SELECT Id FROM Goal__c WHERE Fulfillment__c=:fulfilmentId And RecordTypeId=:kraRecordTypeId And Status__c= 'Active' LIMIT 1];
-             gl.Parent_Goal__c = findTheActiveGoal.Id;
+             
+             List<Goal__c> findTheActiveGoal;
+             findTheActiveGoal = [SELECT Id FROM Goal__c WHERE Fulfillment__c=:fulfilmentId And RecordTypeId=:kraRecordTypeId And Status__c= 'Active' LIMIT 1];
+             System.debug('$findTheActiveGoal' + findTheActiveGoal);
+            
+             //smaske : made findTheActiveGoal as List
+             //checking is Active record is available , if yes then assigning id else searching for Inreview/Completed records
+             if (findTheActiveGoal != null && findTheActiveGoal.size() > 0) {
+              System.debug('$findTheActiveGoal' + findTheActiveGoal);
+              gl.Parent_Goal__c = findTheActiveGoal[0].Id;
+              } else {
+                findTheActiveGoal = [SELECT Id FROM Goal__c WHERE Fulfillment__c=:fulfilmentId And RecordTypeId=:kraRecordTypeId And (Status__c= 'KRA Inreview' OR Status__c= 'KRA Completed' ) LIMIT 1];
+                System.debug('$findTheActiveGoal' + findTheActiveGoal);
+                gl.Parent_Goal__c = findTheActiveGoal[0].Id;
+              }
+            //gl.Parent_Goal__c = findTheActiveGoal.Id;
             try{
               insert gl;  
             }catch(exception ex){
