--- a/force-app/main/default/classes/BatchToUpdatePridcation.cls
+++ b/force-app/main/default/classes/BatchToUpdatePridcation.cls
@@ -34,7 +34,7 @@ global class BatchToUpdatePridcation  implements Database.Batchable<sObject> {
             if(rr.of_Total_Nominations__c > totalNoms){
                 totalNoms = rr.of_Total_Nominations__c;
                 winner = rr.id;
-              scoringUpdateMap.get(rr.Id).System_Predicted_Status__c = 'Might Winner'; //smaske:[03-July-2024]: Changing "Might Winner" with "Less likely to win" for PM_102
+              scoringUpdateMap.get(rr.Id).System_Predicted_Status__c = 'Less likely to win'; //smaske:[03-July-2024]: Changing "Might Winner" with "Less likely to win" for PM_102
               scoringUpdateMap.get(rr.Id).Comments__c = 'Resource got more nomination when compared to other Contenders.'; 
             }else{
               scoringUpdateMap.get(rr.Id).System_Predicted_Status__c = 'Most Likely Winner';
